Added some new text for info about me

--- a/Personal-Portfolio/index.html
+++ b/Personal-Portfolio/index.html
@@ -13,6 +13,9 @@
 
             <p> Eddy Arriaga-B </p>
             <p> 17 YRS OLD </p>
+            <p> Projects </p>
+            <p> Experience </p>
+            <p> Merits </p>
         
-        </body>
+        [</body>
 </html>
